--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
+[egg_info]
+tag_build = dev
+tag_date = true
+
+[aliases]
+release = egg_info -Db ''
+release_pypi = release register sdist upload
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
@@ -9,4 +16,3 @@ style = pep440
 versionfile_source = haskpy/_version.py
 versionfile_build = haskpy/_version.py
 tag_prefix =
-
