--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,11 @@
 tag_build = dev
 tag_date = true
 
+# To release to PyPI:
+#   python setup.py release
+#   twine upload
 [aliases]
-release = egg_info -Db ''
-release_pypi = release register sdist upload
+release = egg_info -Db '' sdist
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
