Fix twine uploading instructions

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ tag_date = true
 
 # To release to PyPI:
 #   python setup.py release
-#   twine upload
+#   twine upload dist/haskpy-x.x.x.tar.gz
 [aliases]
 release = egg_info -Db '' sdist
 
