Improve releasing instructions

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,12 @@ tag_build = dev
 tag_date = true
 
 # To release to PyPI:
+#   git clone . tmp
+#   pushd tmp
 #   python setup.py release
 #   twine upload dist/haskpy-x.x.x.tar.gz
+#   popd
+#   rm -r tmp
 [aliases]
 release = egg_info -Db '' sdist
 
