--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,5 +32,5 @@ jobs:
         git add .
         git config user.email '<>'
         git config user.name 'GitHub Actions'
-        git commit -m "Build GitHub Pages"
+        git commit -m "Build documentation"
         git push
